--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="https://fonts.cdnfonts.com/css/blanka" rel="stylesheet">
-        <title>zilin ye portfolio</title>
+        <title>Home|Zilin Ye</title>
         <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
