--- a/beamforming.html
+++ b/beamforming.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Zilin Ye| Beamforming</title>
+        <title>Zilin Ye|Beamforming</title>
         <link href="https://fonts.cdnfonts.com/css/blanka" rel="stylesheet">
         <link rel="stylesheet" href="styles.css"/>
          <!-- Icon library -->
@@ -85,12 +85,12 @@
                 <a href="https://www.linkedin.com/in/zilin-ye-zye/" target="_blank">
                     <ion-icon name="logo-linkedin"></ion-icon>
                 </a>
-                <a href="#" >
+                <a href="https://github.com/zye829" >
                     <ion-icon name="logo-github" target="_blank"></ion-icon>
                 </a>  
             </div>
             <p> Designed and Developed by Zilin Ye </p>
-            <p> zilinye.ca</p>
+            <p> zilinye.com</p>
         </section>
         
 
