--- a/exercise_eq.html
+++ b/exercise_eq.html
@@ -131,12 +131,12 @@
                 <a href="https://www.linkedin.com/in/zilin-ye-zye/" target="_blank">
                     <ion-icon name="logo-linkedin"></ion-icon>
                 </a>
-                <a href="#" >
+                <a href="https://github.com/zye829" >
                     <ion-icon name="logo-github" target="_blank"></ion-icon>
                 </a>  
             </div>
             <p> Designed and Developed by Zilin Ye </p>
-            <p> zilinye.ca</p>
+            <p> zilinye.com</p>
         </section>
     
         
