--- a/exercise_eq.html
+++ b/exercise_eq.html
@@ -3,7 +3,10 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Zilin Ye|Exercise Equipment Prototyping</title>
+        <title>
+            <link rel="logo" href="img/Logo.jpg" type="image/jpg">
+            Zilin Ye|Exercise Equipment Prototyping
+        </title>
         <link href="https://fonts.cdnfonts.com/css/blanka" rel="stylesheet">
         <link rel="stylesheet" href="styles.css"/>
          <!-- Icon library -->
