--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="https://fonts.cdnfonts.com/css/blanka" rel="stylesheet">
-        <title>Zilin Ye|Home</title>
+        <title>
+            <link rel="logo" href="img/Logo.jpg" type="image/jpg">
+            Zilin Ye|Home
+        </title>
         <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
