--- a/exercise_eq.html
+++ b/exercise_eq.html
@@ -16,7 +16,7 @@
             <a href="#" class="logo">ZY</a>
 
             <nav class="navbar">
-                <a href="welcome.html" class="navlink">Home</a>
+                <a href="index.html" class="navlink">Home</a>
                 <a href="about.html" class="navlink">About</a>
                 <a href="Zilin Ye resume.pdf" class="navlink" target="_blank">Resume</a>
             </nav>
