--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="#" class="logo">ZY</a>
 
             <nav class="navbar">
-                <a href="#" class="active navlink">Home</a>
+                <a href="index.html" class="active navlink">Home</a>
                 <a href="about.html" class="navlink">About</a>
                 <a href="Zilin Ye resume.pdf" class="navlink" target="_blank">Resume</a>
             </nav>
