github link changes

--- a/about.html
+++ b/about.html
@@ -59,8 +59,8 @@
                 <a href="https://www.linkedin.com/in/zilin-ye-zye/" target="_blank">
                     <ion-icon name="logo-linkedin"></ion-icon>
                 </a>
-                <a href="https://github.com/zye829" >
-                    <ion-icon name="logo-github" target="_blank"></ion-icon>
+                <a href="https://github.com/zye829"  target="_blank">
+                    <ion-icon name="logo-github"></ion-icon>
                 </a>  
             </div>
             <p> Designed and Developed by Zilin Ye </p>
