--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>
             Zilin Ye|Home
         </title>
-        <link rel="logo" href="img/Logo.jpg" type="image/jpg">
+        <link rel="icon" href="img/zy.png" type="x-icon">
         <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
