--- a/MIRA.html
+++ b/MIRA.html
@@ -6,7 +6,7 @@
         <title>
             Zilin Ye|MIRA
         </title>
-        <link rel="logo" href="img/Logo.jpg" type="image/jpg">
+        <link rel="icon" href="favicon.ico" type="x-icon">
         <link href="https://fonts.cdnfonts.com/css/blanka" rel="stylesheet">
         <link rel="stylesheet" href="styles.css"/>
          <!-- Icon library -->
