--- a/exercise_eq.html
+++ b/exercise_eq.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>
-            <link rel="logo" href="img/Logo.jpg" type="image/jpg">
             Zilin Ye|Exercise Equipment Prototyping
         </title>
+        <link rel="icon" href="favicon.ico" type="x-icon">
         <link href="https://fonts.cdnfonts.com/css/blanka" rel="stylesheet">
         <link rel="stylesheet" href="styles.css"/>
          <!-- Icon library -->
