--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>
             Zilin Ye|Home
         </title>
-        <link rel="icon" href="favicon.ico" type="image/x-icon">
+        <link rel="icon" href="favicon.ico" type="x-icon">
         <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
