--- a/supportive_teens.html
+++ b/supportive_teens.html
@@ -6,7 +6,7 @@
         <title>
             Zilin Ye|Supportive Teens
         </title>
-        <link rel="icon" href="favicon.ico" type="x-icon">
+        <link rel="icon" href="favicon.ico" type="image/png">
         <link href="https://fonts.cdnfonts.com/css/blanka" rel="stylesheet">
         <link rel="stylesheet" href="styles.css"/>
          <!-- Icon library -->
