Self description update

--- a/about.html
+++ b/about.html
@@ -32,8 +32,8 @@
                     Who is passionate about creating positive impacts in the medical industry through technology. 
                 </h3>
                 <p class="project-des">
-                    I enjoy tackling difficult challenges with my skills because skills are only advanced when you challenge your weaknesses. 
-                    I believe always seeking refinement and challenges is crucial to self-improvement. 
+                    I enjoy tackling difficult challenges because skills are only strengthened when you challenge your weaknesses. 
+                    I believe actively seeking refinement and challenges is crucial to self-improvement. 
                     To me, nothing is impossible once you put your mind to it. 
                 </p>
 
