--- a/MIRA.html
+++ b/MIRA.html
@@ -21,7 +21,7 @@
             <nav class="navbar">
                 <a href="index.html" class="navlink">Home</a>
                 <a href="about.html" class="navlink">About</a>
-                <a href="Zilin Ye resume.pdf" class="navlink" target="_blank">Resume</a>
+                <a href="Resume 2024 .pdf" class="navlink" target="_blank">Resume</a>
             </nav>
         </header>
          <!-- About -->
